# IFJ-2019-2020

./: .gitignore  CMakeLists.txt  Makefile  README.md  indent.ifj  inf2post_main.c  numbers.ifj  output.txt  rozdeleni  symtable.c  symtable.h  test.ifj  tests.sh
doc/: Precedencna_tabulka.ods  grammar_final.txt
doc/dokumentace/: dokumentace.aux  dokumentace.tex  dokumentace.toc
embedded_functions/: chr.ifjcode19  gen_code_struc.ifjcode19  inputf.ifjcode19  inputi.ifjcode19  inputs.ifjcode19  len.ifjcode19  ord.ifjcode19  substr.ifjcode19
examples/: README  err_indentation2.err  err_indentation3.src  err_localglobal.err  skuska_generate1.py
prec_anal_examples/: example1.txt  example2.txt  example3.txt  example4.txt  example5.txt
src/: 4  dynamic_string.c  dynamic_string.h  errors.h  general_stack.c  general_stack.h  generate.c  generate.h  generate_ver2.c  generate_ver2.h  indent_stack.c  indent_stack.h  infixToPostfix.c  infixToPostfix.h  main.c  parser.c  parser.h  precedence_analysis.c  precedence_analysis.h  precedence_semantic.c  precedence_semantic.h  scanner.c  scanner.h  scanner_test.c  semantic.c  semantic.h  string_test.c  symbol_list.c  symbol_list.h  symtable.c  symtable.h
tests/correct_results/: test10_correct.txt  test11_correct.txt  test12_correct.txt  test13_correct.txt  test1_correct.txt  test2_correct.txt  test4_correct.txt  test5_correct.txt  test6_correct.txt  test7_correct.txt  test8_correct.txt  test9_correct.txt
tests/inputs/: example10.src  example11.src  example12.src  (+7 more)
tests_new/: output_log.txt  test.sh  tests.txt  tests_generate.txt
(+125 files in other folders)
